@@ -3503,7 +3503,10 @@ void cBaseChar::refreshMaximumValues()
 			maxHitpoints_ = wpMax<ushort>( 1, ( ( strength_ * Config::instance()->factorMaxHits() ) / 2 ) + hitpointsBonus_ + 50 );
 
 		maxStamina_ = wpMax<ushort>( 1, dexterity_ * Config::instance()->factorMaxStam() + staminaBonus_ );
-		maxMana_ = wpMax<ushort>( 1, (intelligence_ * Config::instance()->factorMaxMana()) + manaBonus_ );
+		if ( isElf() )
+			maxMana_ = wpMax<ushort>( 1, (intelligence_ * Config::instance()->factorMaxMana() * Config::instance()->elfwisdombonus()) + manaBonus_ );
+		else
+			maxMana_ = wpMax<ushort>( 1, (intelligence_ * Config::instance()->factorMaxMana()) + manaBonus_ );
 	}
 }
 
